--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,18 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl:
+  intl: any
+
+
+
 
 
 
   cupertino_icons: ^1.0.2
-intl: ^0.18.1
+  provider: ^6.0.5
+
+
+
 
 dev_dependencies:
   flutter_test:
